--- a/test/src/main/java/uks/debuggen/medical/marburgexpertsystem/MarburgHealthSystem/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/medical/marburgexpertsystem/MarburgHealthSystem/classModel.yaml
@@ -394,11 +394,11 @@ Disease object = model.getOrCreateDisease(event.getBlockId());
 object.setName(event.getName());
 for (String name : stripBrackets(event.getSymptoms()).split(\",\\s+\")) {
    if (name.equals(\"\")) continue;
-   object.withSymptoms(model.getOrCreateSymptom(getObjectId(name)));
+   object.withSymptoms(model.getOrCreateSymptom(name));
 }
 for (String name : stripBrackets(event.getCounterSymptoms()).split(\",\\s+\")) {
    if (name.equals(\"\")) continue;
-   object.withCounterSymptoms(model.getOrCreateSymptom(getObjectId(name)));
+   object.withCounterSymptoms(model.getOrCreateSymptom(name));
 }
 return object;
 "
