--- a/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
@@ -644,8 +644,8 @@ if (outdated(event)) {
 Item object = model.getOrCreateItem(event.getBlockId());
 object.setName(event.getName());
 object.setPrice(event.getPrice());
-object.setBuyer(model.getOrCreateGuest(getObjectId(event.getBuyer())));
-object.setParty(model.getOrCreateParty(getObjectId(event.getParty())));
+object.setBuyer(model.getOrCreateGuest(event.getBuyer()));
+object.setParty(model.getOrCreateParty(event.getParty()));
 return object;
 "
   modified: 	false
@@ -682,7 +682,7 @@ if (outdated(event)) {
   methodBody: 	"GuestBuilt event = (GuestBuilt) e;
 Guest object = model.getOrCreateGuest(event.getBlockId());
 object.setName(event.getName());
-object.setParty(model.getOrCreateParty(getObjectId(event.getParty())));
+object.setParty(model.getOrCreateParty(event.getParty()));
 object.setExpenses(event.getExpenses());
 return object;
 "
