--- a/test/src/main/java/uks/debuggen/party2/PartyApp/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/party2/PartyApp/classModel.yaml
@@ -735,7 +735,7 @@ if (outdated(event)) {
   methodBody: 	"Party2Built event = (Party2Built) e;
 Party2 object = model.getOrCreateParty2(event.getBlockId());
 object.setName(event.getName());
-object.setRegion(model.getOrCreateRegion(getObjectId(event.getRegion())));
+object.setRegion(model.getOrCreateRegion(event.getRegion()));
 object.setDate(event.getDate());
 object.setAddress(event.getAddress());
 return object;
@@ -775,8 +775,8 @@ if (outdated(event)) {
 Item object = model.getOrCreateItem(event.getBlockId());
 object.setName(event.getName());
 object.setPrice(event.getPrice());
-object.setBuyer(model.getOrCreateGuest(getObjectId(event.getBuyer())));
-object.setParty(model.getOrCreateParty2(getObjectId(event.getParty())));
+object.setBuyer(model.getOrCreateGuest(event.getBuyer()));
+object.setParty(model.getOrCreateParty2(event.getParty()));
 return object;
 "
   modified: 	false
@@ -813,7 +813,7 @@ if (outdated(event)) {
   methodBody: 	"GuestBuilt event = (GuestBuilt) e;
 Guest object = model.getOrCreateGuest(event.getBlockId());
 object.setName(event.getName());
-object.setParty(model.getOrCreateParty2(getObjectId(event.getParty())));
+object.setParty(model.getOrCreateParty2(event.getParty()));
 object.setExpenses(event.getExpenses());
 return object;
 "
