--- a/test/src/main/java/uks/debuggen/studyright/StudyRight/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/studyright/StudyRight/classModel.yaml
@@ -680,7 +680,7 @@ if (outdated(event)) {
 University object = model.getOrCreateUniversity(event.getBlockId());
 for (String name : stripBrackets(event.getRooms()).split(\",\\s+\")) {
    if (name.equals(\"\")) continue;
-   object.withRooms(model.getOrCreateRoom(getObjectId(name)));
+   object.withRooms(model.getOrCreateRoom(name));
 }
 return object;
 "
@@ -718,10 +718,10 @@ if (outdated(event)) {
   methodBody: 	"RoomBuilt event = (RoomBuilt) e;
 Room object = model.getOrCreateRoom(event.getBlockId());
 object.setCredits(event.getCredits());
-object.setUni(model.getOrCreateUniversity(getObjectId(event.getUni())));
+object.setUni(model.getOrCreateUniversity(event.getUni()));
 for (String name : stripBrackets(event.getDoors()).split(\",\\s+\")) {
    if (name.equals(\"\")) continue;
-   object.withDoors(model.getOrCreateRoom(getObjectId(name)));
+   object.withDoors(model.getOrCreateRoom(name));
 }
 return object;
 "
@@ -761,7 +761,7 @@ Student object = model.getOrCreateStudent(event.getBlockId());
 object.setName(event.getName());
 object.setBirthYear(Integer.parseInt(event.getBirthYear()));
 object.setStudentId(event.getStudentId());
-object.setUni(model.getOrCreateUniversity(getObjectId(event.getUni())));
+object.setUni(model.getOrCreateUniversity(event.getUni()));
 return object;
 "
   modified: 	false
@@ -834,7 +834,7 @@ if (outdated(event)) {
 Stop object = model.getOrCreateStop(event.getBlockId());
 object.setMotivation(event.getMotivation());
 object.setRoom(event.getRoom());
-object.setPreviousStop(model.getOrCreateStop(getObjectId(event.getPreviousStop())));
+object.setPreviousStop(model.getOrCreateStop(event.getPreviousStop()));
 return object;
 "
   modified: 	false
@@ -870,7 +870,7 @@ if (outdated(event)) {
   id: 	StudyRightBuilder_loadTourBuilt
   methodBody: 	"TourBuilt event = (TourBuilt) e;
 Tour object = model.getOrCreateTour(event.getBlockId());
-object.setTourList(model.getOrCreateTourList(getObjectId(event.getTourList())));
+object.setTourList(model.getOrCreateTourList(event.getTourList()));
 object.setStops(event.getStops());
 return object;
 "
